[gd_scene load_steps=4 format=3 uid="uid://cwxysu6vdb0wc"]

[ext_resource type="Script" uid="uid://b2wx60h880klj" path="res://scripts/_world.gd" id="1_7inqr"]
[ext_resource type="Texture2D" uid="uid://bluwvfaltt8pm" path="res://assets/textures/ui/screen_cover.png" id="2_72oc4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_advor"]
size = Vector3(8192, 256, 8192)

[node name="world" type="Node3D"]
script = ExtResource("1_7inqr")

[node name="viewports" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 900.0

[node name="player_0" type="SubViewportContainer" parent="viewports"]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 450.0

[node name="vp" type="SubViewport" parent="viewports/player_0"]
handle_input_locally = false
msaa_2d = 3
msaa_3d = 3
use_occlusion_culling = true
mesh_lod_threshold = 0.0
audio_listener_enable_3d = true
size = Vector2i(1920, 540)
render_target_update_mode = 4

[node name="screen_cover" type="TextureRect" parent="viewports/player_0"]
visible = false
layout_mode = 2
texture = ExtResource("2_72oc4")

[node name="player_1" type="SubViewportContainer" parent="viewports"]
layout_mode = 0
offset_top = 540.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="vp" type="SubViewport" parent="viewports/player_1"]
handle_input_locally = false
msaa_2d = 3
msaa_3d = 3
use_occlusion_culling = true
mesh_lod_threshold = 0.0
audio_listener_enable_3d = true
size = Vector2i(1920, 540)
render_target_update_mode = 4

[node name="screen_cover" type="TextureRect" parent="viewports/player_1"]
visible = false
layout_mode = 2
texture = ExtResource("2_72oc4")

[node name="death_zone" type="Area3D" parent="."]
collision_mask = 255

[node name="shape" type="CollisionShape3D" parent="death_zone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -260, 0)
shape = SubResource("BoxShape3D_advor")
